# the-cloud

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: Dockerfile  app.py  requirements.txt  resources.md
app/templates/: index.html
cloud/: Dockerfile  acknowledgements.md  app.py  off.sh  package-lock.json  package.json  requirements.txt  resources.md
cloud/app/: requirements.txt
cloud/static/: about-style.css  animation.js  app-landing.js  app.js  style.css
cloud/templates/: about.html  index.html  landing.html  off.html
