[tool.poetry]
name = "cloud"
version = "0.1.0"
description = "What's a digital carbon footprint?"
authors = ["R I B Z <kilbergr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
python-kasa = "^0.5.3"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
Flask = "^2.3.2"
python-kasa = "^0.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
